--- a/example-app/package.json
+++ b/example-app/package.json
@@ -4,12 +4,23 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "test": "jest",
+        "test:watch": "jest --watch"
+    },
+    "jest": {
+        "testEnvironment": "node",
+        "transform": {
+            "^.+\\.js$": "babel-jest"
+        }
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.28.5",
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.11.0",
+        "babel-jest": "^30.2.0",
         "concurrently": "^9.0.1",
+        "jest": "^30.2.0",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
